<resources>
    <string name="app_name">Find Your NGO</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_maps">Maps</string>
    <string name="title_overview">Overview</string>
    <string name="title_favourites">Favourites</string>
    <string name="overview_item_name">Name</string>
    <string name="overview_item_siteOfOperation">Site of operation</string>
    <string name="overview_item_defaultValue">0</string>
</resources>
