<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.findyourngo.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_overview"
        android:name="com.example.findyourngo.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.findyourngo.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.findyourngo.ui.searchbar.SearchBarFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>