<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overview_item"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overview_item_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/overview_item_rating">
        <TextView
            android:id="@+id/overview_item_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/overview_item_info_siteofoperation"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/overview_item_name"/>
        <TextView
            android:id="@+id/overview_item_info_siteofoperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_item_info_name"
            android:textSize="14sp"
            android:text="@string/overview_item_siteOfOperation"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overview_item_rating"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/overview_item_info">

        <RatingBar
            android:id="@+id/overview_item_trustworthiness_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:isIndicator="true"
            style = "?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:rating="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/overview_item_trustworthiness_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/overview_item_trustworthiness_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/overview_item_trustworthiness_stars">
            <TextView
                android:id="@+id/overview_item_trustworthiness_rating_ratevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/overview_item_trustworthiness_rating_amountofrates"
                android:textSize="12sp"
                android:text="@string/overview_item_defaultValue"/>
            <TextView
                android:id="@+id/overview_item_trustworthiness_rating_amountofrates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/overview_item_trustworthiness_rating_ratevalue"
                android:textSize="12sp"
                android:text="@string/overview_item_defaultValue"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>